--- a/index/templates/index/home.html
+++ b/index/templates/index/home.html
@@ -7,8 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{{title}}</title>
-    <style type="text/css" src="{% static 'index/css/home.css' %}"></style>
-    <script type="text/javascript" src="{% static 'index/js/slide.js' %}"></script>
     <script src="https://kit.fontawesome.com/9d936a6ca5.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static 'index/css/all.css' %}">
     <link rel="stylesheet" href="{% static 'index/css/bootstrap.min.css' %}">
@@ -45,11 +43,13 @@
                 <input class="form-control mr-sm-2" type="text" placeholder="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
+            <ul>
+            <li class="nav-item">
+                    <a class="nav-link" style="color:grey"  href="{% url 'logout' %}"><i class="fa fa-user-md" aria-hidden="true"></i> Logout</a>
+                </li>
+            </ul>
         </div>
     </nav>
-
-    <div class="container">
-    <br>
 <div id="carouselId" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
         <li data-target="#carouselId" data-slide-to="0" class="active"></li>
@@ -58,13 +58,16 @@
     </ol>
     <div class="carousel-inner" role="listbox">
         <div class="carousel-item active">
-            <img src="{% static 'index/images/comp.jpg' %}" alt="First slide" height="400px", width="100%">
+            <img src="{% static 'index/images/comp.jpg' %}" alt="First slide" height="440px", width="100%">
+            <div class="caption">OSUSTECH FRONT GATE</div>
         </div>
         <div class="carousel-item">
-            <img src="{% static 'index/images/students2.png' %}" alt="Second slide" height="400px", width="100%">
+            <img src="{% static 'index/images/students2.png' %}" alt="Second slide" height="440px", width="100%">
+            <div class="caption">STUDENTS</div>
         </div>
         <div class="carousel-item">
-            <img src="{% static 'index/images/students1.jpg' %}" alt="Third slide" height="400px", width="100%">
+            <img src="{% static 'index/images/students1.jpg' %}" alt="Third slide" height="440px", width="100%">
+            <div class="caption">STUDENTS</div>
         </div>
     </div>
     <a class="carousel-control-prev" href="#carouselId" role="button" data-slide="prev">
@@ -77,10 +80,12 @@
     </a>
 </div>
 <br>
-    <div class="page-header"> <h2>200L Biochemistry Students</h2> </div><hr>
+<div class="container">
+    <br>
+    <div class="page-header"> <h2>100L and 200L Biochemistry Students</h2> </div><hr>
     
     <br>
-    <h5 style="color:blue" class="text-danger">Trending</h5><br>
+    <h5 style="color:blue" class="text-danger">Trending News</h5><br>
     <div class="row">
     {% for blog in blogs %}
             <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
@@ -88,21 +93,24 @@
                 <div class="card">
                     <h5>{{blog.title|truncatechars:50}}</h5>
                     <p style="color:grey">Category: {{blog.category}}  Posted by <span>{{blog.author}}</span></p>
+                    <p style="color:grey">{{blog.time}}</p>
                     <img src='{{ blog.image.url }}' alt="picture" width="300px" height="200px"  />
                 </div>
                 </a>
             </div>
     {% endfor %}
+            
             <div class="row">
             <div class="col col-offset-6">
+            <br>
             <a name="" id="" class="btn btn-primary" href="{% url 'news' %}" role="button" style="">Read all news</a>
             </div>
             </div>
     </div>
     <hr>
     <br>
-    <h4 class="text-danger">Announcement</h4><br>
-    <div class="row">
+    <h4 class="text-danger"><a href="#colcontent" data-toggle="collapse"> Suggestions and Assignments</a></h4><br>
+    <div class="row collapse in" id="colcontent">
             {% for announce in announces %}
             <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
             <div class="media">
@@ -111,10 +119,14 @@
                 <img class="media-object rounded-circle" height="50px" alt="picture" src="{% static 'index/images/download.jpg' %}" />
                 </div>
                 <div class="media-body ml-3">
-                    <h5 class="media-heading">{{announce.author}}</h5>
-                    <p  style="color:darkkhaki">Category: {{announce.category}}</p>
+                    <h5 class="media-heading" style="font-weight:900">{{announce.author}} 
+                    <p  style="color:darkkhaki; font-size:15px">Category: {{announce.category}}<span class="text-info"> {{announce.time}}</span></p>
+                    <p  style="color:pink; font-size:15px">Level: {{announce.level}}></p>
+                    <img src='{{ announce.image.url }}' alt="picture" width="300px" height="200px"  />
+                    </h5>
+                    <hr>
                 </div>
-                    <p class="media-heading ml-3">{{announce.title|truncatechars:100}}</p>
+                    <p class="media-heading ml-3" style="color:black; margin-top:-10px">{{announce.title|truncatechars:100}}</p>
                 </a>
             </div>
             <br>
@@ -126,43 +138,41 @@
     <h4 class="text-info">Advertisements and Market Place</h4><br>
     <div class="row">
             <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
-                <p>Welcome to RHOKAYE school. We are known for our impact on students. All we need is your trust and we give you our best</p>
-                <p>Rhokaye was founded in the year 1995 under a man named RHOKAYE</p>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
-                <p>Welcome to RHOKAYE school. We are known for our impact on students. All we need is your trust and we give you our best</p>
-                <p>Rhokaye was founded in the year 1995 under a man named RHOKAYE</p>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
-                <p>Welcome to RHOKAYE school. We are known for our impact on students. All we need is your trust and we give you our best</p>
-                <p>Rhokaye was founded in the year 1995 under a man named RHOKAYE</p>
+                <p>Welcome to market place, Here you can post whatever you want to sell or buy from people</p>
+                <p class="text-danger">Sorry, this service is not available at this moment</p>
             </div>
     </div>
 </div>
 <div class="container-fluid mt-5" style="background-color:black">
-    <footer class="page-footer" style="text-align:left">
+    <footer class="page-footer" style="text-align:center">
         <div class="row">
             <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12 mt-5">
-                <img src="{% static 'index/images/biochem1.png' %}" alt="logo">
-                <span class="text-info">Welcome to the Department of Biochemistry in OSUSTECH</span>
+            <div class="media">
+                <div class="media-left media-top"><img src="{% static 'index/images/biochem1.png' %}" alt="logo"></div>         
+                <div class="media-body text-info ml-3" style="text-align:left">Welcome to the Department of Biochemistry in OSUSTECH</div>
+            </div>
             </div>
             <div class="col-lg-5 col-md-12 col-sm-12 col-xs-12 mt-5">
-                <h4 style="color:cornflowerblue">Contact/Connect with us on</h4>
+                <h4 style="color:cornflowerblue">Os-Biochem on</h4>
                 <ul>
-                    <li style="display:inline"><a href="https://facebook.com/The-Rhokaye-Schools-2645341108828651/"><i style="color:blue" class="fab fa-facebook fa-2x fa-sm-1x"></i></a></li>
-                    <li style="display:inline"><a href="https://whatsapp.com/08131615393/"><i style="color:green" class="fab fa-whatsapp fa-2x ml-4"></i></a></li>
-                    <li style="display:inline"><a href=""><i style="color:purple" class="fab fa-instagram fa-2x ml-4"></i></a></li>
-                    <li style="display:inline"><a href=""><i style="color:blue" class="fab fa-linkedin fa-2x ml-4"></i></a></li>
-                    <li style="display:block"><i style="color:green" class="fas fa-phone ml-4 mt-5"></i>+234-6672-617-397</li>
+                    <li style="display:inline"><a href="https://facebook.com/emehinola.samuelsunday/"><i style="color:blue" class="fab fa-facebook fa-2x fa-sm-1x"></i></a></li>
+                    <li style="display:inline"><a href="https://whatsapp.com/08131615393/" style="pointer-events:none"><i style="color:green" class="fab fa-whatsapp fa-2x ml-4"></i></a></li>
+                    <li style="display:inline"><a href="" style="pointer-events:none"><i style="color:purple"class="fab fa-instagram fa-2x ml-4"></i></a></li>
+                    <li style="display:inline"><a href="" style="pointer-events:none"><i style="color:blue" class="fab fa-linkedin fa-2x ml-4"></i></a></li>
                 </ul>
             </div>
             <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12 mt-5" style="color:white">
-                <h4 style="color:cornflowerblue">About</h4>
-                <p>Welcome to RHOKAYE school. We are known for our impact on students. All we need is your trust and we give you our best</p>
-                <p>Rhokaye was founded in the year 1995 under a man named RHOKAYE</p>
+                <h4 style="color:cornflowerblue">About the Developer</h4>
+                 <p>I'm Emehinola Samuel Sunday, a student of UNIVERSITY OF LAGOS.
+                 I study Computer Science and i am a web developer who develops sites
+                 ranging from e-commerce, music to educational site</p>
+                 <p>08131615393</p>
+                 <p><ul>
+                    <li style="display:inline"><a href="https://www.facebook.com/emehinola.samuelsunday"><i style="color:blue" class="fab fa-facebook fa-2x fa-sm-1x"></i></a</li>
+                </ul></p>
             </div>
         </div>
-        <div style="display:block; color:white"><span style="color:yellow" class=""><i class="fab fa-internet-explorer fa-2x" style="color:grey"></i> Website designed and developed by <a href="https://www.facebook.com/emehinola.samuelsunday" style="color:blue"> Emehinola Samuel</a></span></div>
+        <div style="display:block; color:white"><span style="color:yellow"  class=""><i class="fa fa-money" aria-hidden="true"></i> Project sponsored by Prof. Bayo</a></span></div>
         
     </footer>
 </div>
