--- a/posts/templates/posts/announceupdate.html
+++ b/posts/templates/posts/announceupdate.html
@@ -4,6 +4,8 @@
 
 {% block content %}
 <h2 class="page-header text-danger">Announcement Update</h2>
+<div class="row">
+    <div class="col-lg-6">
     <div class="mb-5">
         <form method="POST" action="" enctype="multipart/form-data">
             <div class="form-group">
@@ -13,5 +15,6 @@
             <button type="submit" class="btn btn-primary" btn-lg btn-block>Submit Post</button>
         </form>
     </div>
-
+</div>
+</div>
 {% endblock  %}
