--- a/posts/templates/posts/details.html
+++ b/posts/templates/posts/details.html
@@ -6,32 +6,42 @@
 
 <div class="page-header mt-3"><h2 class="text-danger">Trending News</h2></div><hr>
 
+<div class="row">
+<div class="col-lg-8">
 <div class="card">
-<h2>{{blog.title}}</h2>
+<div class="media">
+<div class="media-left media-top"><img class="media-object rounded-circle" height="50px" alt="picture" src="{% static 'index/images/download.jpg' %}" /></div>
+<div class="media-body ml-3">
+<h2 class="media-head">{{blog.title}}</h2>
+<img class="media-object" height="300px" width="100%" alt="picture" src="{{blog.image.url}}" />
 <p style="color:grey">Category: {{blog.category}}</p>
-<img src='{{ blog.image.url }}' alt="picture" width="400px" height="300px"/>
 <p>{{blog.body}}</p>
 </div>
-
+</div>
+</div>
+</div>
+</div>
+<br>
 <h3 class="page-header text-info">Discussions</h3>
+<div class="row">
+<div class="col-lg-6">
 <div class="jumbotron">
 {% for comment in comments %}
     {% if comment.trend_id == blog.id %}
         <div class="media">
             <div class="media-left media-top"><img class="media-object rounded-circle" height="50px" alt="picture" src="{% static 'index/images/download.jpg' %}" /></div>
             <div class="well">
-            <div class="media-body">
+            <div class="media-body ml-3">
             <h5 class="meadia-head">{{comment.author}}</h5>
-            <p class="card-text">{{comment.body}}</p>
+            <p class="card-text ml-3">{{comment.body}}</p>
             <span class="card-text" style="color:grey">-{{comment.time}}</span>
             </div>
             </div>
         </div>
     {% endif %}
 {% endfor %}
-
 <div class="row">
-    <div class="col-lg-3">
+    <div class="col-lg-12">
     <form method="POST" action="">
         <div class="form-group">
             {% csrf_token %}
@@ -43,7 +53,6 @@
 </div>
 </div>
 </div>
-
-
+</div>
 
 {% endblock  %}
