--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -12,7 +12,7 @@
         </div>
         <div class="row">
             <div class="col-lg-offset-4 col-lg-4 col-md-12 col-sm-12 col-xs-12 bg-info">
-                <span>{{prof.first_name}} {{prof.last_name}}</span>
+                <span style="font-weight:bolder">{{user.first_name}} {{user.last_name}}</span>
             </div>
         </div>
         </center>
