--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -16,25 +16,37 @@
     <link rel="stylesheet" href="{% static 'index/js/all.js' %}">
     <link rel="stylesheet" href="{% static 'index/js/bootstrap.min.js' %}">
     <script type="text/javascript" src="{% static 'index/js/all.js' %}"></script>
+    <style type="text/css" rel="stylesheet">
+        .help_text{
+            visibility: hidden;
+        }
+    </style>
 </head>
 
 <body style="background-color:cornflowerblue; background-repeat:no-repeat">
 <center>
     <h1>OSUSTECH-BIOCHEMISTRY</h1>
-    <div class="card mt-5" style="width:400px; text-align:left; background-color:cornflowerblue;  position:relative; top:45px">
-        <h1 class="text-info" style="font-size:60px;">Create Accout</h1>
+    <div class="row">
+    <div class="col-lg-4"></div>
+    <div class="col-lg-4 col-md-12 col-sm-8 col-xs-12">
+    <div class="card" style="width:400px; text-align:left; background-color:cornflowerblue;  position:relative; top:45px">
         <div class="container mb-5">
         <form method="POST" action="">
-            <div class="form-group mb-5">
-                {% csrf_token %}
-                {{form|crispy}}
+            <div class="row">
+            <div class="col-lg-12 col-md-8 col-sm-8 col-xs-8">
+                <div class="form-group mb-5">
+                    {% csrf_token %}
+                    {{form|crispy}}
+                </div>
+            </div>
             </div>
             <button type="submit" class="btn btn-info btn-lg btn-block">Continue</button>
         </form>
-        <p>Note: You will be redirected to a page where you are to complete your registratios</p>
+        <p>Note: You will be redirected to a page where you are to complete your registration</p>
         <p class="mt-5">Already have an account? <a href="{% url 'login' %}" style="color:yellow">Sign In</a></p><p> <a href="" class="text-danger"> Forgot Password?</a></p>
         </div>
-        
+        </div>
+        </div>
     </div>
     
 </center>
